--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.0",
     "jest": "^27.2.0",
     "node-fetch": "^2.6.2",
     "supertest": "^6.1.6"
